--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ DB_USER=root
 DB_PASSWORD=Surana#123
 DB_HOST=localhost
 DB_NAME=biometric_attendance
+
+SECRET_KEY=super-secret-key2026
+JWT_SECRET_KEY=super-JWT-key2026
